--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script data-main="app" src="lib/require.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="app.js"></script>
 	<meta charset="utf-8">
 	<title>Advanced JavaScript - Exercise 2</title>
 </head>
