Added grunt file with express, watch, open.

--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="//localhost:35729/livereload.js"></script>
     <script data-main="app" src="lib/require.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<title>Advanced JavaScript - Exercise 2</title>
 </head>
 <body>
-<h1>Advanced JavaScript - Exercise 2</h1>
+<h1>Advanced JavaScript - Exercise 2!</h1>
 
 <div id="help">
 	<p>
-		<strong>Instructions:</strong> Add notes to the list by typing into the text box and clicking "Add".
+		<strong>Instructions here:</strong> Add notes to the list by typing into the text box and clicking "Add".
 	</p>
 	<p>
 		Ex:
