Module pattern added

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,12 @@
 <body>
 <h1>Advanced JavaScript - Exercise 2!</h1>
 
+<div class="clickme"></div>
+<div id="clicked-count">0</div>
+
+<div class="clickme2"></div>
+<div id="clicked-count2">0</div>
+
 <div id="help">
 	<p>
 		<strong>Instructions here:</strong> Add notes to the list by typing into the text box and clicking "Add".
