--- a/app/index.html
+++ b/app/index.html
@@ -4,53 +4,63 @@
 	<script src="//localhost:35729/livereload.js"></script>
     <script data-main="app" src="lib/require.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.15.0.css">
+
 	<meta charset="utf-8">
 	<title>Advanced JavaScript - Exercise 2</title>
 </head>
 <body>
 <h1>Advanced JavaScript - Exercise 2!</h1>
 
-<div class="clickme"></div>
-<div id="clicked-count">0</div>
+<h1 id="qunit-header">Unit Tests</h1>
+<h2 id="qunit-banner"></h2>
+<div id="qunit-testrunner-toolbar"></div>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture"></div>
 
-<div class="clickme2"></div>
-<div id="clicked-count2">0</div>
+<div style="display:none">
+    <div class="clickme"></div>
+    <div id="clicked-count">0</div>
 
-<div id="help">
-	<p>
-		<strong>Instructions here:</strong> Add notes to the list by typing into the text box and clicking "Add".
-	</p>
-	<p>
-		Ex:
-		<a class="note" href="#">Some notes taken</a>
-	</p>
+    <div class="clickme2"></div>
+    <div id="clicked-count2">0</div>
+
+    <div id="help">
+        <p>
+            <strong>Instructions here:</strong> Add notes to the list by typing into the text box and clicking "Add".
+        </p>
+        <p>
+            Ex:
+            <a class="note" href="#">Some notes taken</a>
+        </p>
+    </div>
+
+    <p>
+        <input id="open_help" type="button" value="Help">
+    </p>
+
+    <input id="note" size="75"> <input id="add_note" type="button" value="Add">
+
+    <div id="notes"></div>
+
+    <p>
+        <strong>Instructions</strong>
+    <ol>
+        <li>
+            In this exercise, you will modify existing code for a simple note taking app. You will not add/remove functionality per se, but instead organize the code into a more proper module design and make it more flexible/reusable.
+        </li>
+        <li>
+            Using what you learned about closure and the module pattern, modify your previous code to wrap all the functionality up into a simple object (call it "NotesManager" or something appropriate), with a simple API, consisting of:</br>
+            - an `init()` method, which you will call from the outside when jQuery's `document.ready` event is fired, and pass in the data from the "database".</br>
+            - a public method to add in notes "in bulk" after retrieval from the "database". hint: this can/should be called **before** you run the "init" method.
+        </li>
+        <li>
+            Make sure you have a "private" storage of the `notes` data list inside your module. Why is it a good idea to keep the data "private" inside the module?
+        </li>
+        <li>
+            What do you notice about the structure of this code as it relates to the DOM access and the usage of jQuery? Would it make sense to "generalize" this code so that the module didn't have hardcoded into it the various DOM elements it would operate on? Explore how you would modify the code in this fashion. What are the benefits and tradeoffs?
+        </li>
+    </p>
 </div>
-
-<p>
-	<input id="open_help" type="button" value="Help">
-</p>
-
-<input id="note" size="75"> <input id="add_note" type="button" value="Add">
-
-<div id="notes"></div>
-
-<p>
-	<strong>Instructions</strong>
-<ol>
-	<li>
-		In this exercise, you will modify existing code for a simple note taking app. You will not add/remove functionality per se, but instead organize the code into a more proper module design and make it more flexible/reusable.
-	</li>
-	<li>
-		Using what you learned about closure and the module pattern, modify your previous code to wrap all the functionality up into a simple object (call it "NotesManager" or something appropriate), with a simple API, consisting of:</br>
-		- an `init()` method, which you will call from the outside when jQuery's `document.ready` event is fired, and pass in the data from the "database".</br>
-		- a public method to add in notes "in bulk" after retrieval from the "database". hint: this can/should be called **before** you run the "init" method.
-	</li>
-	<li>
-		Make sure you have a "private" storage of the `notes` data list inside your module. Why is it a good idea to keep the data "private" inside the module?
-	</li>
-	<li>
-		What do you notice about the structure of this code as it relates to the DOM access and the usage of jQuery? Would it make sense to "generalize" this code so that the module didn't have hardcoded into it the various DOM elements it would operate on? Explore how you would modify the code in this fashion. What are the benefits and tradeoffs?
-	</li>
-</p>
 </body>
 </html>
